# remote_aurora

./: .gitignore  AGENT.md  AGENTS.md  README.md
aurora/: model_parameters.json  pyproject.toml  requirements.txt
aurora/auroraig/: __init__.py  config.py
aurora/auroraig/adapters/: __init__.py  reconvla_action_tokenizer.py  reconvla_adapter.py
aurora/auroraig/data/: __init__.py  consistency_builder.py  consistency_quality_filter.py  hybrid_rewriter.py  pair_builder.py  schemas.py  yolo_neighbor_detector.py
aurora/auroraig/interfaces/: __init__.py  llm_client.py
aurora/auroraig/models/: __init__.py  consistency_model.py  contrastive_model.py
aurora/auroraig/training/: consistency_dataset.py  dataset.py  train_consistency.py  train_contrastive.py
aurora/configs/: auroraig_contrastive.yaml
aurora/doc/: README.md
aurora/docs-main/: server_deployment.md
aurora/reconvla/: README_SYNC.md  action_tokenizer.py  kbit_training.py  model_parameters.json  pre_train_vla_action.py  train_vla.py
aurora/reconvla/recon/: action_tokenizer.py  constants.py  conversation.py  mm_utils.py  recon_trainer.py  utils.py
aurora/scripts/: build_calvin_reconvla_json.py  build_consistency_pairs.py  build_llm_pairs_calvin.sh  build_pairs.py  build_precomputed_aux_data.py  detect_yolo_neighbors.py  filter_consistency_pairs.py  train_consistency.py  train_contrastive.py  validate_reconvla_data.py  visualize_instruction_pairs.py
aurora/scripts/train_vla/: a100_lora_smoke.sh  full_finetune.sh  hpc_env.sh  image_recon_only.sh  lora_finetune.sh  preflight_check.sh  text_image_recon.sh  (+4 more)
(+47 files in other folders)
