[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auroraig"
version = "0.1.0"
description = "Contrastive implicit grounding extension compatible with Reconvla"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2.0",
  "transformers>=4.40.0",
  "Pillow>=10.0.0",
  "PyYAML>=6.0.1"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
